--- a/tabbed-code-blocks.css
+++ b/tabbed-code-blocks.css
@@ -13,9 +13,14 @@
     user-select: none;
 }
 
-/* Use the background colour from mdbook-admonish info blocks. */
+/* Use the background and border colours from mdbook-admonish info blocks. */
 .tabbed-blocks ul.tab-bar li.active {
     background-color: rgba(0, 184, 212, 0.1);
+    border-top: 4px solid #00b8d4;
+}
+
+.tabbed-blocks ul.tab-bar li {
+    border-top: 4px solid rgba(127, 127, 127, 0.5);
 }
 
 /* Remove vertical space between tabs and code blocks. */
